Updates: *Added remember me functionality while logging in *Fixed behaviour of register/login nav links while on smaller displays

--- a/ComputerServiceShopSolution/CSOS.UI/wwwroot/css/site.css
+++ b/ComputerServiceShopSolution/CSOS.UI/wwwroot/css/site.css
@@ -187,7 +187,8 @@ body {
     max-height: 750px;
     object-fit: cover;
 }
-.site-checkbox{
+.site-checkbox {
     height: 17px;
     width: 17px;
+    accent-color: #863cb0;
 }
